static/style.css
@import "syntax.css";

blockquote, p, ul, .post-content:not(.js-file-line-container) {
	text-align: justify;
	hyphens: auto;
}

pre {
	background-color: var(--background-secondary);
	overflow: auto;
	border-radius: 0;
	white-space: nowrap;
	padding: 20px;
}

pre code {
	margin-right: 20px;
}

.line {
	white-space: pre;
}

code, kbd {
	font-family: 'IBM Plex Mono', monospace;
	font-size: 0.9em;
	font-weight: inherit;
	hyphens: none;
}

.pagination__buttons {
	justify-content: space-between;
}

.pagination__buttons > *:only-child {
	margin: 0 auto;
}

.pagination__buttons code {
	padding: 0;
	background: none;
}

table:not(.js-file-line-container) {
	table-layout: auto;
}

.header {
	position: sticky;
	top: 0;
	z-index: 999;
}

h2 {
	margin-top: 2rem;
}

.menu a:hover {
	text-decoration: underline;
}

h1:before, h2:before, h3:before, h4:before, h5:before, h6:before {
	content: '';
	display: block;
	position: relative;
	width: 0;
	height: 96px;
	margin-top: -96px;
}

.logo__cursor {
	margin-left: 6px;
	width: 8px;
}

